[package]
name = "secure_save"
version = "0.1.0"
authors = ["Itai Fish <chessandpotatoes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.8.1"
hex = "0.4.2"
getrandom = "0.1.14"
blowfish = { version = "0.4", features = ["bcrypt"] }
byteorder = "1.3.4"
base64 = "0.12"
